--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -9,7 +9,5 @@ jobs:
   respond-to-dispatch:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
       - name: Run a script
-        run: echo "Event: ${{ github.event_name }}"
+        run: echo "Event of type: $GITHUB_EVENT_NAME"
