Another Context test

--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -6,10 +6,12 @@ jobs:
     steps:
       - name: "Context Test"
         run: |
-          echo "Action $MY_ACTION"
-          echo "Actor $MY_ACTOR"
-          echo "Actor ID $MY_ACTOR_ID"
+          echo "Action is $MY_ACTION"
+          echo "Actor is $MY_ACTOR"
+          echo "Actor ID is $MY_ACTOR_ID"
+          echo "Ref is $REF"
         env:
           MY_ACTION: ${{ github.action }} 
           MY_ACTOR: ${{ github.actor }}
           MY_ACTOR_ID: ${{ github.actor_id }}
+          REF: ${{ github.action_ref }}
