--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -3,14 +3,15 @@ name: "Dep Jobs Example"
 on: ['push']
 
 jobs:
-    job2:
-      runs-on: ubuntu-latest
-      needs: job1
-      steps:
-        - name: stepA
-        - run: echo "World"
-    job1:
-      runs-on: ubuntu-latest
-      steps:
-        - name: stepB
-        - run: echo "Hello"
+  job1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: stepB
+        run: echo "Hello"
+
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+      - name: stepA
+        run: echo "World"
