--- a/.github/workflows/custom-action.yml
+++ b/.github/workflows/custom-action.yml
@@ -10,6 +10,5 @@ jobs:
         uses: idjorgon/hello-barsoom@0.0.7
         with:
           name: 'Rafael'
-      # Use the output from the `hello` step
       - name: Get the output
-        run: echo "The time was ${{ steps.hello.outputs.greeting }}"
+        run: echo "${{ steps.hello.outputs.greeting }}"
