--- a/.github/workflows/custom-action.yml
+++ b/.github/workflows/custom-action.yml
@@ -9,6 +9,6 @@ jobs:
         id: hello
         uses: idjorgon/hello-barsoom@0.0.7
         with:
-          name: 'Rafael'
+          name: 'Rafael & Ivan'
       - name: Get the output
         run: echo "${{ steps.hello.outputs.greeting }}"
